2006-07-23 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: fixed issue with resize/move of extended
	  partitions

2006-07-23 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* src/Win_GParted.cc: added FIXME:
	* include/GParted_Core.h,
	  src/GParted_Core.cc,
	  src/fat32.cc: decoupled libparted partition and filesystemresizing.
	  This resulted in a much more consistent core. This also affected
	  several other aspects of resizing/moving in a positive way.

2006-07-20 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: FIXME business
	* src/Win_GParted.cc: only snap to cylinder if operation is != DELETE
	  or FORMAT

2006-07-20 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  src/GParted_Core.cc,
	  src/Win_GParted.cc: perform some checks before adding a new
	  operation to the list.
	* src/Partition.cc: made get_length() a bit safer

2006-07-19 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Dialog_Progress.cc: added FIXME
	* src/GParted_Core.cc: removed FIXME

2006-07-19 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Dialog_Progress.h,
	  include/Operation.h,
	  src/Dialog_Progress.cc,
	  src/GParted_Core.cc: show warning in progressfeedback if a certain
	  action is n/a. Of course we only allow these actions if the results
	  are non-lethal.

2006-07-19 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* enabled move support for all the filesystems. Also made some small
	  changes to the logic which determines if copy is allowed.

2006-07-19 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: added some progressfeedback 

2006-07-19 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/xfs.cc: fixed potential crasher in read algorithm (#347914)

2006-07-18 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  src/GParted_Core.cc: worked a bit on progressfeedback..
	* include/Partition.h: added FIXME
	
2006-07-17 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Win_GParted.cc,
	  include/GParted_Core.h,