@@ -1,5 +1,10 @@
 2006-07-23 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc: more work on moving/resizing sequence
+
+2006-07-23 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* src/GParted_Core.cc: fixed issue with resize/move of extended
 	  partitions
 
